stylesheet fix (footer was covering some text)

--- a/trunk/EnterpriseApplicationRetrieval/WebDesignShowcase/WebDesignShowcase-war/web/style.css
+++ b/trunk/EnterpriseApplicationRetrieval/WebDesignShowcase/WebDesignShowcase-war/web/style.css
@@ -23,7 +23,7 @@ th {text-align:center;}
 #header {min-height:50px; padding:5px 0 0 30px; background-color:#DDD; border-bottom:2px solid #999;}
 #header .logo {font-size:2.2em;}
 #header a {color:#A02C2F;}
-#main {width:800px; margin:0 auto; padding:50px 0; text-align:center;}
+#main {width:800px; margin:0 auto; padding:50px 0 100px 0; text-align:center;}
 img.design {min-width:600px; min-height:300px; padding:8px; border:5px solid #CCC;}
 #main #comments {text-align:left; width:500px; margin:50px auto 0 auto; padding-bottom:150px;}
 #footer {position:absolute; bottom:0; width:100%; text-align:center; background-color:#DDD; border-top:2px solid #999; padding-top:5px; padding-bottom:15px;}
